Refactor api server and update boat rideshare application logic
